added automated screenshot

--- a/src/main/resources/framework.properties
+++ b/src/main/resources/framework.properties
@@ -2,4 +2,6 @@ broswer.name=chrome
 app.url=https://zoom.us
 excel.location=/Users/atin/Desktop
 excel.name=TestData.xlsx
-
+screenshot.pass.dir=screenshot/pass
+screenshot.fail.dir=screenshot/fail
+datestamp=ddMMyyyyHHmmSS
