added html reports

--- a/src/main/resources/framework.properties
+++ b/src/main/resources/framework.properties
@@ -5,3 +5,5 @@ excel.name=TestData.xlsx
 screenshot.pass.dir=screenshot/pass
 screenshot.fail.dir=screenshot/fail
 datestamp=ddMMyyyyHHmmSS
+report.dir=reports
+report.filename=AutomationReport.html
